force-app/main/default/objects/Achievement__c/fields/Achievement_Category__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Category__c</fullName>
    <label>Achievement Category</label>
    <referenceTo>Achievement_Category__c</referenceTo>
    <relationshipLabel>Achievements</relationshipLabel>
    <relationshipName>Achievements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>