force-app/main/default/objects/Achievement__c/fields/Achievement_Id__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Achievement Id</label>
    <type>Text</type>
</CustomField>