force-app/main/default/objects/Achievement__c/fields/BritesheetId__c.field-meta.xml
<CustomField>
    <fullName>BritesheetId__c</fullName>
    <externalId>true</externalId>
    <label>BritesheetId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>