force-app/main/default/objects/Achievement__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <label>Group Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Greatest Value</fullName>
                <default>true</default>
                <label>Greatest Value</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Greatest Value (Specialization)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>