force-app/main/default/objects/Achievement__c/fields/Level_1_Details__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Details__c</fullName>
    <defaultValue>&quot;uczy się, brak samodzielnosci, wymaga kontroli i sprawdzania efektów pracy, ma kontakt z technologią w projekcie&quot;</defaultValue>
    <inlineHelpText>Jakie warunki trzeba spełnić aby osiągnąć pierwszy poziom umiejętności</inlineHelpText>
    <label>Level 1 Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>