force-app/main/default/objects/Achievement__c/fields/Level_2_Details__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Details__c</fullName>
    <defaultValue>&quot;samodzielna praca przynajmniej w jednym projekcie, nie wymaga kontroli&quot;</defaultValue>
    <inlineHelpText>Jakie warunki trzeba spełnić aby osiągnąć drugi poziom umiejętności</inlineHelpText>
    <label>Level 2 Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>