force-app/main/default/objects/Achievement__c/fields/Level_3_Details__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Details__c</fullName>
    <defaultValue>&quot;może uczyć innych oraz wyceniać funkcjionalości, wiedza potwierdzona pracą w kilku projektach, osoba kontaktowa w przypadku zapytań o daną umiejętność&quot;</defaultValue>
    <inlineHelpText>Jakie warunki trzeba spełnić aby osiągnąć trzeci poziom umiejętności</inlineHelpText>
    <label>Level 3 Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>