force-app/main/default/objects/Achievement__c/fields/My_Achievement__c.field-meta.xml
<CustomField>
    <fullName>My_Achievement__c</fullName>
    <formula>NOT(ISBLANK($User.ContactId)) &amp;&amp; Responsible_Person__c = $User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Achievement</label>
    <type>Checkbox</type>
</CustomField>