force-app/main/default/objects/Achievement__c/fields/NumberOfValues__c.field-meta.xml
<CustomField>
    <fullName>NumberOfValues__c</fullName>
    <label>Number of Values</label>
    <summaryForeignKey>Achievement_Value__c.Achievement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>