force-app/main/default/objects/Achievement__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Osoba odpowiedzialna za uzupełnienie opisów</description>
    <inlineHelpText>Osoba odpowiedzialna za uzupełnienie opisów</inlineHelpText>
    <label>Responsible Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Achievements</relationshipLabel>
    <relationshipName>Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>