force-app/main/default/objects/Achievement__c/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speciality</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Achievement_Set__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Specialization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Achievement_Set__c</referenceTo>
    <relationshipLabel>Specialities</relationshipLabel>
    <relationshipName>Speciality</relationshipName>
    <type>Lookup</type>
</CustomField>