force-app/main/default/objects/Achievement__c/recordTypes/Attribute.recordType-meta.xml
<RecordType>
    <fullName>Attribute</fullName>
    <active>true</active>
    <description>Umiejętność określana jakościowo za pomocą konfigurowalnej skali</description>
    <label>Attribute</label>
</RecordType>