force-app/main/default/objects/Achievement__c/recordTypes/Badge.recordType-meta.xml
<RecordType>
    <fullName>Badge</fullName>
    <active>true</active>
    <description>Odznaka - współczynnik ilościowy</description>
    <label>Badge</label>
</RecordType>