force-app/main/default/objects/Achievement__c/recordTypes/Certificate.recordType-meta.xml
<RecordType>
    <fullName>Certificate</fullName>
    <active>true</active>
    <description>Certifikat</description>
    <label>Certificate</label>
</RecordType>