force-app/main/default/objects/Achievement__c/recordTypes/Group.recordType-meta.xml
<RecordType>
    <fullName>Group</fullName>
    <active>true</active>
    <description>Zbiór umiejętności.</description>
    <label>Group</label>
</RecordType>