force-app/main/default/objects/Achievement__c/recordTypes/MonthsFromDate.recordType-meta.xml
<RecordType>
    <fullName>MonthsFromDate</fullName>
    <active>true</active>
    <description>Liczba miesięcy od podanej daty</description>
    <label>Number of Months From Date</label>
</RecordType>