force-app/main/default/objects/Achievement__c/recordTypes/Skill.recordType-meta.xml
<RecordType>
    <fullName>Skill</fullName>
    <active>true</active>
    <description>Umiejętność określana jakościowo za pomocą trzy stopniowej skali</description>
    <label>Skill</label>
</RecordType>