force-app/main/default/objects/Achievement__c/recordTypes/Specialization.recordType-meta.xml
<RecordType>
    <fullName>Specialization</fullName>
    <active>true</active>
    <description>Specializacja</description>
    <label>Specialization</label>
</RecordType>