force-app/main/default/objects/Achievement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Achievement_Category__c</columns>
    <columns>Details__c</columns>
    <columns>Level_1_Details__c</columns>
    <columns>Level_2_Details__c</columns>
    <columns>Level_3_Details__c</columns>
    <columns>Responsible_Person__c</columns>
    <columns>My_Achievement__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>