force-app/main/default/objects/Achievement__c/listViews/MyResponsibility.listView-meta.xml
<ListView>
    <fullName>MyResponsibility</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Achievement_Category__c</columns>
    <columns>Details__c</columns>
    <columns>Level_1_Details__c</columns>
    <columns>Level_2_Details__c</columns>
    <columns>Level_3_Details__c</columns>
    <columns>Responsible_Person__c</columns>
    <columns>My_Achievement__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Achievement__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Responsibility</label>
</ListView>